# LexNOID

./: .gitignore  README.md  main.py  pyproject.toml
models/: search.py  search_result.py
tests/: test_search.py
